syntax = "proto3";

option csharp_namespace = "RapidTime.Api";

import "google/protobuf/empty.proto";
import "Protos/city.proto";
import "Protos/country.proto";

package addressAggregate;

service AddressAggregate {
  rpc GetAddressAggregate (GetAddressAggregateRequest) returns (AddressAggregateResponse);
  rpc UpdateAddressAggregate (UpdateAddressAggregateRequest) returns (AddressAggregateResponse);
  rpc DeleteAddressAggregate (DeleteAddressAggregateRequest) returns (google.protobuf.Empty);
  rpc CreateAddressAggregate (CreateAddressAggregateRequest) returns (AddressAggregateResponse);
}
message GetAddressAggregateRequest{
  int32 id = 1;
}

message AddressAggregateResponse{
  AddressAggregateBase response = 1;
}

message UpdateAddressAggregateRequest{
  AddressAggregateBase response = 1;
}

message DeleteAddressAggregateRequest{
  int32 id = 1;
}

message CreateAddressAggregateRequest{
  AddressAggregateBase request = 1;
}

message AddressAggregateBase {
  City city = 1;
  Country country = 2;
  string street = 3;
  int32 streetNumber = 4;
}